Update and rename proyectos.html to consultas.html

--- a/consultas.html
+++ b/consultas.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias - Hernavia</title>
-    <meta name="description" content="Explora las noticas sobre Hernavia, con los hechos mas importantes que pasen.">
+    <title>Consultas - Hernavia</title>
+    <meta name="description" content="Envía tus consultas a Hernavia y descubre cómo participar o informarte sobre nuestras iniciativas.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Noticias Hernavia">
+    <meta name="author" content="Consultas Hernavia">
     <style>
         .ups {
             text-align: center;
@@ -23,14 +23,14 @@
 <body>
 
 <header>
-    <h1>Noticias de Hernavia</h1>
+    <h1>Consultas de Hernavia</h1>
 </header>
 
 <nav class="nav-comun">
-    <a href="index.html">Inicio</a>
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
-    <a href="proyectos.html">Proyectos</a>
+    <a href="consultas.html">Consultas</a>
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
@@ -39,7 +39,7 @@
 
 <main>
     <section class="section">
-        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
+        <div class="ups">Ups… este apartado de consultas no tiene información por ahora, espera a que se actualice.</div>
     </section>
 </main>
 
