--- a/noticias.html
+++ b/noticias.html
@@ -36,10 +36,10 @@
 </header>
 
 <nav class="nav-comun">
-    <a href="index.html">Inicio</a>
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
-    <a href="proyectos.html">Proyectos</a>
+    <a href="consultas.html">Consultas</a>
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
