--- a/consultas.html
+++ b/consultas.html
@@ -27,7 +27,7 @@
 </header>
 
 <nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+    <a href="index.html">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="consultas.html">Consultas</a>
@@ -39,7 +39,7 @@
 
 <main>
     <section class="section">
-        <div class="ups">Ups… este apartado de consultas no tiene información por ahora, espera a que se actualice.</div>
+        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
     </section>
 </main>
 
