--- a/consultas.html
+++ b/consultas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consultas - Hernavia</title>
-    <meta name="description" content="Envía tus consultas a Hernavia y descubre cómo participar o informarte sobre nuestras iniciativas.">
+    <meta name="description" content="Encontraras consultas hechas por Hernavia para saber su opinion.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
@@ -39,7 +39,7 @@
 
 <main>
     <section class="section">
-        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
+        <div class="ups">Ups… este apartado de consultas no tiene información por ahora, espera a que se actualice.</div>
     </section>
 </main>
 
