--- a/consultas.html
+++ b/consultas.html
@@ -13,7 +13,7 @@
     <style>
         .ups {
             text-align: center;
-            color: #777; 
+            color: #333; 
             font-size: 1.2em;
             font-style: italic;
             margin-top: 40px;
@@ -39,7 +39,7 @@
 
 <main>
     <section class="section">
-        <div class="ups">Ups… este apartado de consultas no tiene información por ahora, espera a que se actualice.</div>
+        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
     </section>
 </main>
 
