--- a/consultas.html
+++ b/consultas.html
@@ -27,7 +27,7 @@
 </header>
 
 <nav class="nav-comun">
-    <a href="index.html">Inicio</a>
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="consultas.html">Consultas</a>
