--- a/simbolos.html
+++ b/simbolos.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Símbolos - Hernavia</title>
-    <script>
-        fetch('head.html')
-            .then(response => response.text())
-            .then(data => {
-                document.head.innerHTML += data;
-            });
-    </script>
+    <meta name="description" content="Descubre los símbolos de Hernavia: bandera, lema y himno que representan la identidad de nuestra comunidad.">
+    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
+    <link rel="stylesheet" href="estilo.css">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
     <style>
         .himno p {
             margin-bottom: 15px;
@@ -24,6 +24,9 @@
         .simbolos-section {
             padding: 20px;
         }
+        .section-lema {
+            min-height: 100px; /* Evita CLS por carga de texto */
+        }
     </style>
 </head>
 
@@ -31,7 +34,8 @@
     <header>
         <h1>Símbolos de Hernavia</h1>
     </header>
-    
+
+    <!-- Nav directo para mejor LCP y CLS -->
     <nav class="nav-comun">
         <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
         <a href="documentos.html">Documentos</a>
@@ -46,11 +50,11 @@
     <main class="simbolos-section">
         <section>
             <h2>Bandera</h2>
-            <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200">
+            <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200" fetchpriority="high">
             <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
         </section>
 
-        <section>
+        <section class="section-lema">
             <h2>Lema y Frase</h2>
             <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
             <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
@@ -91,7 +95,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
     </footer>
