--- a/simbolos.html
+++ b/simbolos.html
@@ -25,7 +25,7 @@
             padding: 20px;
         }
         .section-lema {
-            min-height: 100px; /* Evita CLS por carga de texto */
+            min-height: 100px; 
         }
     </style>
 </head>
