--- a/comounirse.html
+++ b/comounirse.html
@@ -84,7 +84,6 @@
     <h1>¿Cómo unirse a Hernavia?</h1>
 </header>
 
-<!-- Nav directo -->
 <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
@@ -97,7 +96,9 @@
 </nav>
 
 <section class="section">
-    <p>Actualmente la ciudadanía por método virtual no está habilitada, aunque puede llenar este formulario y será notificado cuando se habilite.</p>
+<p>
+Actualmente la ciudadanía por método virtual no está habilitada, aunque puede llenar este formulario y será notificado cuando se active. Además, tenga en cuenta que la participación es muy importante para Hernavia: si participa en las consultas de la página <a href="consultas.html">Consultas</a>, esto quedará registrado y se tomará en cuenta.
+</p>
 
     <form action="https://formspree.io/f/xldpgjop" method="POST">
         <label for="nombre">Nombre completo:</label>
