--- a/simbolos.html
+++ b/simbolos.html
@@ -25,8 +25,12 @@
         .simbolos-section {
             padding: 20px;
         }
-        .section-lema {
+        section {
+            min-height: 150px; 
             padding: 15px 0;
+        }
+        .section-lema {
+            min-height: 100px; 
         }
     </style>
 </head>
@@ -101,4 +105,3 @@
     </footer>
 </body>
 </html>
-
