--- a/simbolos.html
+++ b/simbolos.html
@@ -17,7 +17,7 @@
             text-align: justify;
         }
         .bandera {
-            max-width: 100%;
+            max-width: 300px;
             display: block;
             margin: 15px auto;
             height: auto;
@@ -26,11 +26,11 @@
             padding: 20px;
         }
         section {
-            min-height: 150px; 
+            min-height: 250px; /* Tamaño grande como antes */
             padding: 15px 0;
         }
         .section-lema {
-            min-height: 100px; 
+            min-height: 200px; /* Tamaño grande como antes */
         }
     </style>
 </head>
@@ -52,6 +52,7 @@
     </nav>
 
     <main class="simbolos-section">
+        <!-- Himno primero -->
         <section>
             <h2>Himno de Hernavia</h2>
             <div class="himno">
@@ -87,12 +88,14 @@
             </div>
         </section>
 
+        <!-- Bandera después -->
         <section>
             <h2>Bandera</h2>
             <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200" fetchpriority="high">
             <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
         </section>
 
+        <!-- Lema y frase al final -->
         <section class="section-lema">
             <h2>Lema y Frase</h2>
             <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
