--- a/simbolos.html
+++ b/simbolos.html
@@ -24,15 +24,15 @@
         }
         .simbolos-section {
             padding: 20px;
-            max-width: 900px; /* ancho original */
+            max-width: 900px; 
             margin: 0 auto;
         }
         section {
-            min-height: 250px; /* largo original */
-            padding: 15px 20px; /* ajuste interno */
+            min-height: 200px; 
+            padding: 15px 20px; 
         }
         .section-lema {
-            min-height: 200px; /* largo original del lema */
+            min-height: 200px; 
         }
     </style>
 </head>
