--- a/simbolos.html
+++ b/simbolos.html
@@ -17,8 +17,8 @@
             text-align: justify;
         }
         .bandera {
-            width: 300px;
-            height: 200px;
+            width: 300px; 
+            height: auto; 
             display: block;
             margin: 15px auto;
         }
@@ -54,7 +54,6 @@
     </nav>
 
     <main class="simbolos-section">
-        <!-- Himno primero -->
         <section>
             <h2>Himno de Hernavia</h2>
             <div class="himno">
@@ -90,7 +89,6 @@
             </div>
         </section>
 
-        <!-- Bandera después -->
         <section>
             <h2>Bandera</h2>
             <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" fetchpriority="high">
