--- a/simbolos.html
+++ b/simbolos.html
@@ -1,110 +1,115 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Símbolos - Hernavia</title>
-    <meta name="description" content="Descubre los símbolos de Hernavia: bandera, lema y himno que representan la identidad de nuestra comunidad.">
-    <link rel="icon" type="image/png" href="favicono.png">
-    <link rel="preload" href="estilo.css" as="style">
-    <link rel="stylesheet" href="estilo.css">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Proyecto Hernavia">
-    <style>
-        .himno p {
-            margin-bottom: 15px;
-            line-height: 1.6;
-            text-align: justify;
-        }
-        .bandera {
-            width: 300px; 
-            height: auto; 
-            display: block;
-            margin: 15px auto;
-        }
-        .simbolos-section {
-            padding: 20px;
-            max-width: 900px; 
-            margin: 0 auto;
-        }
-        section {
-            min-height: 200px; 
-            padding: 15px 20px; 
-        }
-        .section-lema {
-            min-height: 200px; 
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Símbolos - Hernavia</title>
+<meta name="description" content="Descubre los símbolos de Hernavia: bandera, lema y himno que representan la identidad de nuestra comunidad.">
+<link rel="icon" type="image/png" href="favicono.png">
+<link rel="preload" href="estilo.css" as="style">
+<link rel="stylesheet" href="estilo.css">
+<meta name="robots" content="index, follow">
+<meta name="author" content="Proyecto Hernavia">
+
+<style>
+    .simbolos-section {
+        max-width: 900px;
+        margin: 20px auto;
+        padding: 20px;
+    }
+    section {
+        min-height: 250px; /* mismo alto que otras páginas */
+        padding: 20px;
+        border-left: 8px solid #006A44;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        background-color: white;
+        margin-bottom: 20px;
+    }
+    .himno p {
+        margin-bottom: 15px;
+        line-height: 1.6;
+        text-align: justify;
+    }
+    .bandera {
+        width: 300px;
+        height: auto;
+        display: block;
+        margin: 15px auto;
+    }
+    .section-lema {
+        min-height: 200px;
+    }
+</style>
 </head>
 
 <body>
-    <header>
-        <h1>Símbolos de Hernavia</h1>
-    </header>
+<header>
+    <h1>Símbolos de Hernavia</h1>
+</header>
 
-    <nav class="nav-comun">
-        <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-        <a href="documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="consultas.html">Consultas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirse?</a>
-        <a href="sugerencias.html">Sugerencias</a>
-        <a href="noticias-random.html">Noticias Random</a>
-    </nav>
+<nav class="nav-comun">
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+    <a href="documentos.html">Documentos</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="consultas.html">Consultas</a>
+    <a href="simbolos.html">Símbolos</a>
+    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="sugerencias.html">Sugerencias</a>
+    <a href="noticias-random.html">Noticias Random</a>
+</nav>
 
-    <main class="simbolos-section">
-        <section>
-            <h2>Himno de Hernavia</h2>
-            <div class="himno">
-                <p><strong>Coro:</strong><br>
-                Un sueño de Hernavia unida,<br>
-                buscando la paz e innovación.<br>
-                Hermandad amarilla, un sueño por cumplir,<br>
-                ¡historia hay que hacer ya!</p>
+<main class="simbolos-section">
+    <section>
+        <h2>Himno de Hernavia</h2>
+        <div class="himno">
+            <p><strong>Coro:</strong><br>
+            Un sueño de Hernavia unida,<br>
+            buscando la paz e innovación.<br>
+            Hermandad amarilla, un sueño por cumplir,<br>
+            ¡historia hay que hacer ya!</p>
 
-                <p><strong>Estrofa 1:</strong><br>
-                Verde natural, naturaleza que cuidar,<br>
-                tono singular, innovación al avanzar.<br>
-                Blanco para paz, dice mucho más unión y fraternidad,<br>
-                cohesión, verdad y solidaridad.<br>
-                Amarillo radiante, camino y hermandad,<br>
-                ¡la fuerza del pueblo nos hará avanzar!</p>
+            <p><strong>Estrofa 1:</strong><br>
+            Verde natural, naturaleza que cuidar,<br>
+            tono singular, innovación al avanzar.<br>
+            Blanco para paz, dice mucho más unión y fraternidad,<br>
+            cohesión, verdad y solidaridad.<br>
+            Amarillo radiante, camino y hermandad,<br>
+            ¡la fuerza del pueblo nos hará avanzar!</p>
 
-                <p><strong>Estrofa 2:</strong><br>
-                Pueblo que avanza con paso constante,<br>
-                honor en la voz y mirada brillante.<br>
-                Astucia y coraje en cada labor,<br>
-                Hernavia florece con fuerza y valor.<br>
-                Con manos sinceras forjamos verdad,<br>
-                soñando el futuro que hoy germinará.</p>
+            <p><strong>Estrofa 2:</strong><br>
+            Pueblo que avanza con paso constante,<br>
+            honor en la voz y mirada brillante.<br>
+            Astucia y coraje en cada labor,<br>
+            Hernavia florece con fuerza y valor.<br>
+            Con manos sinceras forjamos verdad,<br>
+            soñando el futuro que hoy germinará.</p>
 
-                <p><strong>Estrofa 3:</strong><br>
-                Con paso sereno forjamos nuestro andar,<br>
-                como un pueblo fuerte, juntos sin parar.<br>
-                Nuestro sueño crece y no se detendrá,<br>
-                hacia el mañana juntos vamos a marchar.<br>
-                Con lucha y respeto vivir en verdad,<br>
-                ¡la voz hernaviana jamás callará!</p>
-            </div>
-        </section>
+            <p><strong>Estrofa 3:</strong><br>
+            Con paso sereno forjamos nuestro andar,<br>
+            como un pueblo fuerte, juntos sin parar.<br>
+            Nuestro sueño crece y no se detendrá,<br>
+            hacia el mañana juntos vamos a marchar.<br>
+            Con lucha y respeto vivir en verdad,<br>
+            ¡la voz hernaviana jamás callará!</p>
+        </div>
+    </section>
 
-        <section>
-            <h2>Bandera</h2>
-            <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" fetchpriority="high">
-            <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
-        </section>
+    <section>
+        <h2>Bandera</h2>
+        <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" fetchpriority="high">
+        <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
+    </section>
 
-        <!-- Lema y frase al final -->
-        <section class="section-lema">
-            <h2>Lema y Frase</h2>
-            <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
-            <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
-        </section>
-    </main>
+    <section class="section-lema">
+        <h2>Lema y Frase</h2>
+        <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
+        <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
+    </section>
+</main>
 
-    <footer>
-        &copy; 2025 Hernavia - Proyecto Cultural
-    </footer>
+<footer>
+    &copy; 2025 Hernavia - Proyecto Cultural
+</footer>
 </body>
 </html>
