--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
 
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
+
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
 </head>
@@ -66,5 +68,6 @@
 
 </body>
 </html>
+
 
 
