--- a/leyes.html
+++ b/leyes.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/leyes.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
 </head>
