--- a/comounirse.html
+++ b/comounirse.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Formulario e información sobre cómo unirse a Hernavia, quieres saber más? Un poco más abajo encuentra una página que te lo explicará.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo.css
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/comounirse.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
     <style>
