--- a/identidad.html
+++ b/identidad.html
@@ -2,11 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Identidad Hernaviana</title>
-    <link rel="icon" type="image/png" href="favicono.png">
-    <meta name="description" content="Mira que es lo que significa ser parte de Hernavia el significado de nuestra identidad.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Identidad Hernaviana</title>
+    <meta name="description" content="Mira qué significa ser parte de Hernavia y el valor de nuestra identidad.">
+    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/identidad.html">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
 
     <style>
         .texto-largo, section p, section li {
