--- a/sugerencias.html
+++ b/sugerencias.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="stylesheet" href="estilo.css">
+     <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
     <style>
